Added scoring and leaderboard endpoints to api docs
