# docs/api.yaml
@@ -580,6 +580,197 @@ paths:
         500:
           $ref: '#/responses/UnexpectedError'
 
+  /scores/start:
+    post:
+      tags:
+        - scores
+      summary: Start Tour
+      description: Create new entry for scoring a Tour.  This is used whenever a user beings a Tour in the App.  Returns a fresh ScoreCard object.
+      operationId: scoresStart
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/AuthToken'
+        - in: body
+          name: request
+          description: Request object.
+          schema:
+            required:
+              - tour_id
+            properties:
+              tour_id:
+                type: integer
+                format: int32
+                description: The ID of the Tour that user has started.
+                example: 10005
+              timestamp:
+                type: integer
+                format: int32
+                description: UTC UNIX timestamp of when the action occurred.
+                example: 1538411257
+      responses:
+        200:
+          description: OK
+          schema: 
+            $ref: '#/definitions/ScoreCard'
+        422:
+          $ref: '#/responses/ValidationError'
+        401:
+          $ref: '#/responses/Unauthroized'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
+  /scores/{score_card_id}/progress:
+    post:
+      tags:
+        - scores
+      summary: Progress Tour
+      description: Save a Tours progress and get the updated score.  This is used to save a new stop visit.  Returns a the ScoreCard object with updated points and progress.  If the stop was the last stop on the Tour, the score card is "finished" and the finished_at timestamp will reflect this.
+      operationId: scoresProgress
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/AuthToken'
+        - in: path
+          name: score_card_id
+          description: ID of the ScoreCard returned when the user started the Tour.
+          required: true
+          type: integer
+          format: int64
+        - in: body
+          name: request
+          description: Request object.
+          schema:
+            required:
+              - stop_id
+            properties:
+              stop_id:
+                type: integer
+                format: int32
+                description: The ID of the stop that user has visited.
+                example: 1999
+              timestamp:
+                type: integer
+                format: int32
+                description: UTC UNIX timestamp of when the action occurred.
+                example: 1538411257
+      responses:
+        200:
+          description: OK
+          schema: 
+            $ref: '#/definitions/ScoreCard'
+        401:
+          $ref: '#/responses/Unauthroized'
+        403:
+          description: 'User has already completed the Tour using this ScoreCard.'
+          schema: 
+            $ref: '#/responses/GeneralError'
+        422:
+          $ref: '#/responses/ValidationError'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
+  /scores:
+    get:
+      tags:
+        - scores
+      summary: User Scores
+      description: Get a list of the user's scores for all Tours they have taken.  This includes all regular tours that have been started, but only the finished adventure tours.  The scores are sorted by the total number of points and only the top score is returned for each tour.
+      operationId: scoresGet
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/AuthToken'
+      responses:
+        200:
+          description: OK
+          schema: 
+            type: array
+            items:
+              $ref: '#/definitions/ScoreCard'
+        401:
+          $ref: '#/responses/Unauthroized'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
+  /scores/find/{tour_id}:
+    get:
+      tags:
+        - scores
+      summary: Find ScoreCard
+      description: Get all of the users scores for a specific tour.  This can be used to look up if the user currently has a tour in progress, to look up their best score for a tour, or to look up the history of how many times they took the Tour.
+      operationId: scoresFind
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/AuthToken'
+        - in: path
+          name: tour_id
+          description: ID of the Tour to find score for.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
+          schema: 
+            type: object
+            properties:
+              best:
+                $ref: '#/definitions/ScoreCard'
+              in_progress:
+                type: array
+                items:
+                  $ref: '#/definitions/ScoreCard'
+              finished:
+                type: array
+                items:
+                  $ref: '#/definitions/ScoreCard'
+        401:
+          $ref: '#/responses/Unauthroized'
+        404:
+          $ref: '#/responses/NotFound'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
+  /leaderboard/{tour_id}:
+    get:
+      tags:
+        - scores
+      summary: Leaderboard
+      description: Get the top 100 leaderboard for a given Tour.
+      operationId: scoresLeaderboard
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/AuthToken'
+        - in: path
+          name: tour_id
+          description: ID of the Tour.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
+          schema: 
+            type: object
+            properties:
+              leaders:
+                type: array
+                items:
+                  $ref: '#/definitions/LeaderboardEntry'
+        401:
+          $ref: '#/responses/Unauthroized'
+        404:
+          $ref: '#/responses/NotFound'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
   /reviews/{tour_id}:
     get:
       tags:
@@ -891,7 +1082,14 @@ responses:
         message: 
           type: string
           description: The error message.
-    
+
+  GeneralError:
+    type: object
+    properties:
+      message: 
+        type: string
+        description: The error message.
+
 definitions:
   StopActivity: 
     type: object
@@ -1137,7 +1335,7 @@ definitions:
         type: string
         description: The instructions for how to redeem the Tour prize.
         example: Goto the local store to redeem.
-        maximum: 255
+        maximum: 65535
       prize_time_limit:
         type: integer
         format: int32
@@ -1554,3 +1752,100 @@ definitions:
         example: '2018-07-21 13:53:20'
       user:
         $ref: '#/definitions/User'
+
+  Prize:
+    type: object
+    properties:
+      details:
+        type: string
+        description: The details and description of the Tour prize.
+        example: $10 Giftcard
+        maximum: 255
+      instructions:
+        type: string
+        description: The instructions for how to redeem the Tour prize.
+        example: Goto the local store to redeem.
+        maximum: 65535
+      time_limit:
+        type: integer
+        format: int32
+        description: The time (in hours) that the tour's prize is available after the the user wins the trophy.
+        example: 48
+      expires_at:
+        type: string
+        format: date-time
+        description: The time when the prize should be considered expired, based on the time limit and the time the user won the prize.
+        example: '2018-07-21 13:53:20'
+
+  ScoreCard:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int32
+        description: The unique id for the score card.
+        example: 99
+      par:
+        type: integer
+        format: int32
+        description: For adventure tours.  The average number of minutes it should take a user to complete the tour.  This is used for calculating users point in the backend, and probably is not needed for the mobile application.
+        example: 66
+      is_adventure:
+        type: boolean
+        description: Identifies if the score card is referencing an adventure tour or not.
+        example: true
+      stops_visited:
+        type: integer
+        format: int32
+        description: The number of stops visited.
+      total_stops:
+        type: integer
+        format: int32
+        description: The total number of stops on the tour.
+      points:
+        type: integer
+        format: int32
+        description: The users current points.  For regular tours, this is updated for every stop the user visits.  For adventure tours, this is only calculated and finalized once a user has visited the last stop on the Tour. 
+      won_trophy:
+        type: boolean
+        description: Identifies if the user should be awarded a trophy.
+        example: true
+      trophy_url:
+        type: string
+        format: string
+        description: The URL for the custom trophy image, if any.
+        example: https://media.wejunket.com/images/4fd1b212d98168645c0dce52bdb05189.jpg
+      prize:
+        $ref: '#/definitions/Prize'
+        description: The prize information that was awarded with the trophy.  This is only populated if the user has won a trophy.
+      started_at:
+        type: string
+        format: date-time
+        description: The time the user started the Tour.
+        example: '2018-07-21 13:53:20'
+      finished_at:
+        type: string
+        format: date-time
+        description: The time the user finished the last stop on the Tour.  For regular tours, this only occurs once they have visited every stop on the Tour.  For adventure tours, this occurs when they have visited the stop that is designated to be the end point of a Tour.
+        example: '2018-07-21 13:53:20'
+      tour_id:
+        type: integer
+        format: int32
+        description: The ID of the tour the score card is referencing.
+        example: 100003
+      tour:
+        $ref: '#/definitions/Tour'
+        description: The tour the score card is referencing.
+
+  LeaderboardEntry:
+    type: object
+    properties:
+      points:
+        type: integer
+        format: int32
+        description: The number of point the user received.  Max points value is 200, minimum is 50.
+        example: 200
+      user:
+        type: object
+        $ref: '#/definitions/Profile'
+        description: The profile of the user.
